--- a/pod.yaml
+++ b/pod.yaml
@@ -27,5 +27,5 @@ spec:
     spec:
       containers:
         - name: hello
-          image: santhoshkumarsk/weekend:latest
+          image: santhoshsk1802/weekend:latest
           imagePullPolicy: Always
